2013-11-23  Andreas Schwab  <schwab@linux-m68k.org>

	* process.c (get_process): Check that OBJ is a live buffer.  (Bug#15923)

2013-11-23  Glenn Morris  <rgm@gnu.org>

	Empty elements in EMACSLOADPATH stand for the default.  (Bug#12100)
	* lread.c (load_path_check): Take path to check as argument.
	(load_path_default): New, split from init_lread.
	(init_lread): Move calc of default load-path to load_path_default.
	Empty elements in EMACSLOADPATH now stand for the default.
	(load-path): Doc fix.
	* emacs.c (decode_env_path): Add option to treat empty elements
	as nil rather than ".".
	* callproc.c (init_callproc_1, init_callproc):
	* image.c (Vx_bitmap_file_path):
	* lisp.h (decode_env_path):
	* lread.c (Vsource_directory):
	Update for new argument spec of decode_env_path.

2013-11-22  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_find_paragraph_start): Limit the returned positions
	to BEGV_BYTE..ZV_BYTE range.  (Bug#15951)

2013-11-21  Paul Eggert  <eggert@cs.ucla.edu>

	Fix some dependency problems that cause unnecessary recompiles.
	Problem reported by RMS in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-11/msg00421.html>.
	* Makefile.in (OLDXMENU_TARGET, OLDXMENU, OLDXMENU_DEPS)
	(really-lwlib, really-oldXMenu, stamp-oldxmenu)
	(../src/$(OLDXMENU), $(OLDXMENU)): Remove.
	(temacs$(EXEEXT)): Depend on $(LIBXMENU), not stamp-oldxmenu.
	($(lwlibdir)/liblw.a, $(oldXMenudir)/libXMenu11.a, FORCE): New targets.
	(boostrap-clean): No need to remove stamp-oldxmenu.

	Fix recently introduced bool vector overrun.
	This was due to an optimization that went awry.
	Reported by Glenn Morris in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-11/msg00622.html>.
	* alloc.c (make_uninit_bool_vector): Don't allocate a dummy word
	for empty vectors, undoing the 2013-11-18 change.
	* data.c (bool_vector_binop_driver): Rely on this.
	Fix bug that occasionally overran the destination.
	* lisp.h (struct Lisp_Bool_vector): Document this.
